--- a/downloaderHelper/build.gradle
+++ b/downloaderHelper/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.novoda.bintray-release'
 
 android {
     compileSdkVersion 26
@@ -28,4 +29,32 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.+'
     testCompile 'junit:junit:4.12'
+}
+
+
+
+// YaoWen(43194) modify  at 2017/12/23 10:48 
+// copy from utils
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        //在 as更新到2.3.3, 并且 com.android.tools.build:gradle 也更新到 2.3.3之后，
+        //在Win 7机器上, bintray-release 0.4.0 编译一直错误。类似gradle没有 相关方法的错误。
+        //当更改到 0.5.0之后，才ok
+        //目前尚不清楚 在mac下会怎么样。 等待更进一步的测试
+//        classpath 'com.novoda:bintray-release:0.4.0'
+        classpath 'com.novoda:bintray-release:0.5.0'
+    }
+}
+
+
+publish {
+    userOrg = 'yaowen369'
+    groupId = 'com.yaoxiaowen'
+    artifactId = 'download'
+    publishVersion = '1.3.0'
+    desc = 'An Android download tool that supports multi-threading and breakpoint renewal'
+    website = 'https://github.com/yaowen369/DownloadHelper'
 }
